--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -236,11 +236,7 @@ RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -401,6 +397,7 @@ PreviewMaterial.ImportSettings=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
+Texture2D.Interchange=False
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -737,7 +734,6 @@ RecastNavMesh.Cooking=True
 RecastNavMesh.DataLayers=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
-Texture2D.Interchange =False
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.667
