--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -237,6 +237,7 @@ NavigationData="\"Object.Display.TileGenerationDebug\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Assets/Amy/Textures/M_Doublebase_Inst.M_Doublebase_Inst
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -734,6 +735,7 @@ RecastNavMesh.Cooking=True
 RecastNavMesh.DataLayers=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.667
@@ -1787,7 +1789,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
@@ -2015,18 +2017,18 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
-MRUItem1=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
-MRUItem2=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
-MRUItem3=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
-MRUItem4=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
-MRUItem5=/Game/Assets/Amy/Textures/M_Doublebase
-MRUItem6=/Game/attic_migration
-MRUItem7=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor_Array
-MRUItem8=/Game/Assets/Amy/Textures/M_Doublebase_Inst
+MRUItem0=/Game/Assets/Amy/Textures/M_Doublebase_Inst
+MRUItem1=/Game/Assets/Amy/Textures/M_Doublebase
+MRUItem2=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
+MRUItem3=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
+MRUItem4=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
+MRUItem5=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
+MRUItem6=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
+MRUItem7=/Game/attic_migration
+MRUItem8=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor_Array
 MRUItem9=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor
 MRUItem10=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_Normal
 MRUItem11=/Game/Assets/Amy/Textures/ceiling_floor_lambert3_OcclusionRoughnessMetallic
