--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -234,10 +234,13 @@ InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Assets/Amy/Textures/M_Doublebase_Inst.M_Doublebase_Inst
+OpenAssetsAtExit=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01.M_Brick_01
+OpenAssetsAtExit=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01.M_Wood_01
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -332,7 +335,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Textures
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -736,6 +739,8 @@ RecastNavMesh.DataLayers=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
 Texture2D.Interchange =True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.667
@@ -2020,19 +2025,22 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Textures/M_Doublebase_Inst
-MRUItem1=/Game/Assets/Amy/Textures/M_Doublebase
-MRUItem2=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
-MRUItem3=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
-MRUItem4=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
-MRUItem5=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
-MRUItem6=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
-MRUItem7=/Game/attic_migration
-MRUItem8=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor_Array
-MRUItem9=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor
-MRUItem10=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_Normal
-MRUItem11=/Game/Assets/Amy/Textures/ceiling_floor_lambert3_OcclusionRoughnessMetallic
-MRUItem12=/Game/Assets/Charlotte/Door/Fabric/Fabric_01
+MRUItem0=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
+MRUItem1=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
+MRUItem2=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
+MRUItem3=/Game/Assets/Amy/Textures/M_Doublebase_Inst
+MRUItem4=/Game/Assets/Amy/Textures/M_Doublebase
+MRUItem5=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
+MRUItem6=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
+MRUItem7=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
+MRUItem8=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
+MRUItem9=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
+MRUItem10=/Game/attic_migration
+MRUItem11=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor_Array
+MRUItem12=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor
+MRUItem13=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_Normal
+MRUItem14=/Game/Assets/Amy/Textures/ceiling_floor_lambert3_OcclusionRoughnessMetallic
+MRUItem15=/Game/Assets/Charlotte/Door/Fabric/Fabric_01
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
