--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,12 +235,20 @@ InputTriggerPulse="\"Object\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
+Actor="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+StaticMesh="\"Object\" "
+AssetViewerSettings="\"Object\" "
+MaterialExpressionAdd="\"Object\" "
+MaterialExpressionNormalize="\"Object\" "
+MaterialExpressionPixelNormalWS="\"Object\" "
+MaterialExpressionMultiply="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/M_Doublebase_Inst.M_Doublebase_Inst
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01.M_Brick_01
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01.M_Wood_01
+OpenAssetsAtExit=/Game/Assets/Amy/Textures/M_Gramophone_Inst.M_Gramophone_Inst
+OpenAssetsAtExit=/Game/Assets/Amy/Textures/M_Doublebase.M_Doublebase
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -335,7 +343,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -741,6 +749,43 @@ AndroidRuntimeSettings.Project SDK Override=True
 Texture2D.Interchange =True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Physics=True
+Actor.Networking=True
+Actor.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionNormalize.MaterialExpression=True
+MaterialExpressionPixelNormalWS.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.667
@@ -1788,7 +1833,6 @@ RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/in
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -1899,6 +1943,12 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Amy/Textures/M_Gramophone_Inst.M_Gramophone_Inst;
+RecentlyPlaced=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst.M_JewelleryBox_Inst;
+RecentlyPlaced=/Game/Assets/Amy/Textures/M_JewelleryBox.M_JewelleryBox;
+RecentlyPlaced=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE.CG_Gramophone_combine_low_UE;
+RecentlyPlaced=/Game/Assets/Amy/Textures/JewelleryBox_low_Top.JewelleryBox_low_Top;
+RecentlyPlaced=/Game/Assets/Amy/Textures/JewelleryBox_low_Bottom.JewelleryBox_low_Bottom;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Doublebase_02.M_Doublebase_02;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Doublebase_Inst.M_Doublebase_Inst;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Doublebase.M_Doublebase;
@@ -2025,22 +2075,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
-MRUItem1=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
-MRUItem2=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
-MRUItem3=/Game/Assets/Amy/Textures/M_Doublebase_Inst
-MRUItem4=/Game/Assets/Amy/Textures/M_Doublebase
-MRUItem5=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
-MRUItem6=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
-MRUItem7=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
-MRUItem8=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
-MRUItem9=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
-MRUItem10=/Game/attic_migration
-MRUItem11=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor_Array
-MRUItem12=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor
-MRUItem13=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_Normal
-MRUItem14=/Game/Assets/Amy/Textures/ceiling_floor_lambert3_OcclusionRoughnessMetallic
-MRUItem15=/Game/Assets/Charlotte/Door/Fabric/Fabric_01
+MRUItem0=/Game/Assets/Amy/Textures/M_Doublebase
+MRUItem1=/Game/Assets/Amy/Textures/M_Gramophone_Inst
+MRUItem2=/Game/Assets/Amy/Textures/CG_Gramophone_low_1_lambert1_OcclusionRoughnessMetallic
+MRUItem3=/Game/Assets/Amy/Textures/M_Gramophone
+MRUItem4=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst
+MRUItem5=/Game/Assets/Amy/Textures/M_JewelleryBox
+MRUItem6=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal
+MRUItem7=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
+MRUItem8=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE
+MRUItem9=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
+MRUItem10=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
+MRUItem11=/Game/Assets/Amy/Textures/M_Doublebase_Inst
+MRUItem12=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
+MRUItem13=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
+MRUItem14=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
+MRUItem15=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
+MRUItem16=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
+MRUItem17=/Game/attic_migration
+MRUItem18=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor_Array
+MRUItem19=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_BaseColor
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2054,6 +2108,11 @@ MRUItem15=/Game/Assets/Charlotte/Door/Fabric/Fabric_01
 /Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic=1
 /Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic=1
 /Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic.notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic=1
+/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01.M_Brick_01=1
+/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01.M_Wood_01=1
+/Game/Assets/Amy/Textures/M_JewelleryBox.M_JewelleryBox=1
+/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal.Jewellery_box_v1_high_lambert1_Normal=1
+/Game/Assets/Amy/Textures/M_JewelleryBox_Inst.M_JewelleryBox_Inst=1
 
 [MaterialEditor]
 PrimType=1
@@ -2311,4 +2370,5 @@ WmfMediaSettings=True
 
 [DetailCategoriesAdvanced]
 Texture2DArray.LevelOfDetail=False
+MaterialEditorInstanceConstant.General=False
 
