--- a/MorriganHall/Config/DefaultEngine.ini
+++ b/MorriganHall/Config/DefaultEngine.ini
@@ -24,6 +24,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.SkinCache.CompileShaders=True
 
 r.RayTracing=True
+r.VirtualTextures=True
+bEnableVirtualTextureOpacityMask=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
