--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -248,9 +248,8 @@ MaterialExpressionConstant3Vector="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst.M_Wood_01_Inst
-OpenAssetsAtExit=/Game/M4/Tashan/Assets/mat_blend_Inst2.mat_blend_Inst2
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst.Wall_Paper_Char_01_Inst
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -347,7 +346,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/M4/Tashan/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Charlotte/Assets/WallPaper
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -800,7 +799,7 @@ MaterialExpressionVectorParameter.ParameterCustomization=True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.667
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -827,7 +826,7 @@ GenericOpen=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericSave=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 MeshImportExport=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 WorldRoot=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
-Level=D:/UNIGITHUB/MorriganHall/MorriganHall/Content
+Level=D:/GroupMorriganHall/MorriganHall/MorriganHall/Content
 Project=C:/Program Files/Epic Games/UE_5.1/
 
 [ModuleFileTracking]
@@ -1844,12 +1843,13 @@ RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/in
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
+MaterialInstanceConstant=
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
@@ -1954,6 +1954,8 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst.Wall_Paper_Char_01_Inst;
+RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_002.wallpapers_sm_wallpaper_002;
 RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_4.wallpapers_sm_wallpaper_4;
 RecentlyPlaced=/Game/M4/Tashan/Assets/wallpaperdefault.wallpaperdefault;
 RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Concrete_01.M_Concrete_01;
@@ -1961,7 +1963,6 @@ RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/Floor.Floor;
 RecentlyPlaced=/Game/M4/Tashan/Assets/mat_blend_Inst2.mat_blend_Inst2;
 RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_003.wallpapers_sm_wallpaper_003;
 RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_004.wallpapers_sm_wallpaper_004;
-RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_002.wallpapers_sm_wallpaper_002;
 RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst.M_Wood_01_Inst;
 RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01.M_Wood_01;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Gramophone_Inst.M_Gramophone_Inst;
@@ -1973,7 +1974,6 @@ RecentlyPlaced=/Game/Assets/Amy/Textures/JewelleryBox_low_Bottom.JewelleryBox_lo
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Doublebase_02.M_Doublebase_02;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Doublebase_Inst.M_Doublebase_Inst;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Doublebase.M_Doublebase;
-RecentlyPlaced=/Game/Assets/Amy/doublebass_low_combine.doublebass_low_combine;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2091,26 +2091,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/M4/Tashan/Assets/mat_blend_Inst2
-MRUItem1=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
-MRUItem2=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
-MRUItem3=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
-MRUItem4=/Game/Assets/Amy/Textures/M_Doublebase
-MRUItem5=/Game/Assets/Amy/Textures/M_Gramophone_Inst
-MRUItem6=/Game/Assets/Amy/Textures/CG_Gramophone_low_1_lambert1_OcclusionRoughnessMetallic
-MRUItem7=/Game/Assets/Amy/Textures/M_Gramophone
-MRUItem8=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst
-MRUItem9=/Game/Assets/Amy/Textures/M_JewelleryBox
-MRUItem10=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal
-MRUItem11=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE
-MRUItem12=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
-MRUItem13=/Game/Assets/Amy/Textures/M_Doublebase_Inst
-MRUItem14=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
-MRUItem15=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
-MRUItem16=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
-MRUItem17=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert2_OcclusionRoughnessMetallic
-MRUItem18=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic_Array
-MRUItem19=/Game/attic_migration
+MRUItem0=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
+MRUItem1=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
+MRUItem2=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
+MRUItem3=/Game/M4/Tashan/Assets/mat_blend_Inst2
+MRUItem4=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
+MRUItem5=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
+MRUItem6=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
+MRUItem7=/Game/Assets/Amy/Textures/M_Doublebase
+MRUItem8=/Game/Assets/Amy/Textures/M_Gramophone_Inst
+MRUItem9=/Game/Assets/Amy/Textures/CG_Gramophone_low_1_lambert1_OcclusionRoughnessMetallic
+MRUItem10=/Game/Assets/Amy/Textures/M_Gramophone
+MRUItem11=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst
+MRUItem12=/Game/Assets/Amy/Textures/M_JewelleryBox
+MRUItem13=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal
+MRUItem14=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE
+MRUItem15=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
+MRUItem16=/Game/Assets/Amy/Textures/M_Doublebase_Inst
+MRUItem17=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
+MRUItem18=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
+MRUItem19=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert3_OcclusionRoughnessMetallic
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2132,6 +2132,9 @@ MRUItem19=/Game/attic_migration
 /Game/Assets/Amy/Textures/M_Gramophone.M_Gramophone=1
 /Game/Assets/Amy/Textures/M_Gramophone_Inst.M_Gramophone_Inst=1
 /Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst.M_Wood_01_Inst=1
+/Game/M4/Tashan/Assets/mat_blend_Inst2.mat_blend_Inst2=1
+/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst.Wall_Paper_Char_01_Inst=1
+/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01.Wall_Paper_Char_01=1
 
 [MaterialEditor]
 PrimType=1
@@ -2390,4 +2393,7 @@ WmfMediaSettings=True
 [DetailCategoriesAdvanced]
 Texture2DArray.LevelOfDetail=False
 MaterialEditorInstanceConstant.General=True
+
+[FEditorModeTools]
+CoordSystem=1
 
